// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@pismo/bolt-pismo-bar it should display the bar 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation4 MuiAppBar-root MuiAppBar-positionRelative makeStyles-bar-4 makeStyles-bar-7 MuiAppBar-colorPrimary"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar-5 makeStyles-toolbar-8 MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root"
        data-testid="mainButton"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            data-testid="Marketplace"
            focusable="false"
            role="presentation"
            viewBox="0 0 16 16"
          >
            <path
              d="M0 4H4V0H0V4ZM6 16H10V12H6V16ZM4 16H0V12H4V16ZM0 10H4V6H0V10ZM10 10H6V6H10V10ZM12 0V4H16V0H12ZM10 4H6V0H10V4ZM12 10H16V6H12V10ZM16 16H12V12H16V16Z"
              fill="currentColor"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </header>
</div>
`;

exports[`@pismo/bolt-pismo-bar when you click the button you should open the icon bar 1`] = `
<body
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation4 MuiAppBar-root MuiAppBar-positionRelative makeStyles-bar-97 makeStyles-bar-100 MuiAppBar-colorPrimary"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar-98 makeStyles-toolbar-101 MuiToolbar-gutters"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          data-testid="mainButton"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              data-testid="Marketplace"
              focusable="false"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <path
                d="M0 4H4V0H0V4ZM6 16H10V12H6V16ZM4 16H0V12H4V16ZM0 10H4V6H0V10ZM10 10H6V6H10V10ZM12 0V4H16V0H12ZM10 4H6V0H10V4ZM12 10H16V6H12V10ZM16 16H12V12H16V16Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </header>
  </div>
  <span
    aria-hidden="true"
    style="display: block; position: absolute; top: -9999px; left: -9999px; font-size: 300px; width: auto; height: auto; line-height: normal; margin: 0px; padding: 0px; font-variant: normal; white-space: nowrap; font-family: Lato,serif; font-style: normal; font-weight: 400;"
  >
    BESbswy
  </span>
  <span
    aria-hidden="true"
    style="display: block; position: absolute; top: -9999px; left: -9999px; font-size: 300px; width: auto; height: auto; line-height: normal; margin: 0px; padding: 0px; font-variant: normal; white-space: nowrap; font-family: Lato,sans-serif; font-style: normal; font-weight: 400;"
  >
    BESbswy
  </span>
  <span
    aria-hidden="true"
    style="display: block; position: absolute; top: -9999px; left: -9999px; font-size: 300px; width: auto; height: auto; line-height: normal; margin: 0px; padding: 0px; font-variant: normal; white-space: nowrap; font-family: serif; font-style: normal; font-weight: 400;"
  >
    BESbswy
  </span>
  <span
    aria-hidden="true"
    style="display: block; position: absolute; top: -9999px; left: -9999px; font-size: 300px; width: auto; height: auto; line-height: normal; margin: 0px; padding: 0px; font-variant: normal; white-space: nowrap; font-family: sans-serif; font-style: normal; font-weight: 400;"
  >
    BESbswy
  </span>
  <div
    class="MuiDrawer-root makeStyles-drawer-94 MuiDrawer-modal"
    data-testid="drawer"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiPaper-root MuiPaper-elevation16 MuiDrawer-paper makeStyles-drawerPaper-95 MuiDrawer-paperAnchorTop"
      style="webkit-transform: none; transform: none; webkit-transition: -webkit-transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiGrid-root makeStyles-appButtonContainer-96 MuiGrid-container MuiGrid-spacing-xs-2"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
        >
          <button
            class="MuiButtonBase-root makeStyles-appButton-288 makeStyles-appButton-290"
            tabindex="0"
            type="button"
          >
            <div
              class="MuiBox-root MuiBox-root-292"
            >
              <div
                class="MuiBox-root MuiBox-root-293 makeStyles-appButtonIcon-289"
              />
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Marketplace
              </p>
            </div>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
        >
          <button
            class="MuiButtonBase-root makeStyles-appButton-288 makeStyles-appButton-324"
            tabindex="0"
            type="button"
          >
            <div
              class="MuiBox-root MuiBox-root-325"
            >
              <div
                class="MuiBox-root MuiBox-root-326 makeStyles-appButtonIcon-289"
              />
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Adjustments
              </p>
            </div>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
        >
          <button
            class="MuiButtonBase-root makeStyles-appButton-288 makeStyles-appButton-327"
            tabindex="0"
            type="button"
          >
            <div
              class="MuiBox-root MuiBox-root-328"
            >
              <div
                class="MuiBox-root MuiBox-root-329 makeStyles-appButtonIcon-289"
              />
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Customer
              </p>
            </div>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
        >
          <button
            class="MuiButtonBase-root makeStyles-appButton-288 makeStyles-appButton-330"
            tabindex="0"
            type="button"
          >
            <div
              class="MuiBox-root MuiBox-root-331"
            >
              <div
                class="MuiBox-root MuiBox-root-332 makeStyles-appButtonIcon-289"
              />
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Backoffice
              </p>
            </div>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
        >
          <button
            class="MuiButtonBase-root makeStyles-appButton-288 makeStyles-appButton-333"
            tabindex="0"
            type="button"
          >
            <div
              class="MuiBox-root MuiBox-root-334"
            >
              <div
                class="MuiBox-root MuiBox-root-335 makeStyles-appButtonIcon-289"
              />
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                WebPOS
              </p>
            </div>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-336"
      >
        <header
          class="MuiPaper-root MuiPaper-elevation4 MuiAppBar-root MuiAppBar-positionRelative makeStyles-bar-97 makeStyles-bar-337 MuiAppBar-colorPrimary"
        >
          <div
            class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar-98 makeStyles-toolbar-338 MuiToolbar-gutters"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root"
              data-testid="mainButton"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  data-testid="Marketplace"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M0 4H4V0H0V4ZM6 16H10V12H6V16ZM4 16H0V12H4V16ZM0 10H4V6H0V10ZM10 10H6V6H10V10ZM12 0V4H16V0H12ZM10 4H6V0H10V4ZM12 10H16V6H12V10ZM16 16H12V12H16V16Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </header>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;
